<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editetx_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edititex_button_custom"
        android:padding="10dp"
        android:inputType="number"
        android:hint="@string/editext_hint_distancia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="@string/editextext_orientation_distancia"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edititex_button_custom"
        android:padding="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/editext_hint_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="@string/editextext_orientation_price"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edititex_button_custom"
        android:padding="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/editext_hint_litro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="@string/editextext_orientation_litro"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/title_value_gasto"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/show_value"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="32sp"
        android:textStyle="bold" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"

        android:background="@color/colorPrimary"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white" />


</LinearLayout>